Fix: Changed the colour palette, tried to remove Important in CSS, attempted to change the spacing to be more visually appealing

--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-}
-
-h2, h3, h4 {
-    font-weight: 700;
+    background-color: rgb(71, 15, 244);
+    color: white;
+    text-align: center;
 }
 
 .page-wrapper {
@@ -19,7 +19,16 @@ h2, h3, h4 {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: aliceblue;
+    background-color: rgb(71, 15, 244);
+
+    h1, h2, h3 {
+        font-weight: 700;
+        padding-bottom: 20px;
+    }
+
+    p{
+        font-weight: 300;
+    }
 }
 
 @media (max-width: 600px) {
@@ -29,22 +38,19 @@ h2, h3, h4 {
     
 }
 
-.center {
-    text-align: center;
-}
-
 .my-img {
-    width: 500px;
-    height: 500px;
+    width: auto;
+    height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
+    padding-bottom: 20px;
 }
 
 .my-button {
-    background-color: #007bff;
-    color: white;
+    background-color: #db324d;
+    color: black;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -57,7 +63,7 @@ h2, h3, h4 {
 }
 
 .my-button:hover {
-    background-color: #0056b3;
+    background-color: rgb(244, 172, 69);
 }
 
 .my-button:active {
